--- a/python_book/mkdocs.yml
+++ b/python_book/mkdocs.yml
@@ -35,6 +35,11 @@ nav:
 
 
 
+extra_javascript: 
+    - https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-AMS-MML_HTMLorMML
+
+markdown_extensions:
+    - mdx_math
 
 
 theme: readthedocs
