changed some directory stuff on python_book

--- a/python_book/mkdocs.yml
+++ b/python_book/mkdocs.yml
@@ -32,6 +32,7 @@ nav:
     - 28. Modules: './28-Modules.md'
     - 29. Comments and Code Documentation: './29-Comments-and-Code-Documentation.md'
     - 30. Packages and Project Structure: './30-Packages-and-Project-Structure.md'
+    - 31. Automated Testing: './31-Automated-Testing.md'
 
 
 
