--- a/python_book/mkdocs.yml
+++ b/python_book/mkdocs.yml
@@ -42,10 +42,10 @@ extra_javascript:
 markdown_extensions:
     - mdx_math
     - codehilite:
-        #linenums: true
+        linenums: true
         #css_class: emacs
-        noclasses: true
-        pygments_style: 'default'
+        #noclasses: true
+        #pygments_style: 'default'
         guess_lang: false
         #use_pygments: true
 
@@ -56,8 +56,8 @@ theme:
         primary: 'blue grey'
         accent: 'grey'
     font:
-        text: 'Ubuntu'
-        code: 'Ubuntu Mono'
+        text: 'Roboto Slab'
+        code: 'Source Code Pro'
     logo:
         icon: 'home'
         
@@ -75,3 +75,11 @@ theme:
        
 # extra_css:
   # - 'stylesheets/emacs.css'   
+class DatabaseManager():
+    """
+    Manages all aspects of the database including how and where data are stored.
+    This database is contact list consisting of a collection of names with
+    corresponding phone numbers and email addresses. This may be implimented as a
+    dictionary (which sorts the list automatically) or a list. The exact structure 
+    of the database is up to you but it might be a good idea to find out how others
+    have done first.
