added 32 and finished 31

--- a/python_book/mkdocs.yml
+++ b/python_book/mkdocs.yml
@@ -1,8 +1,9 @@
 site_name: The Redd Python Book
 nav:
-# start nav
+
     - Home: 'index.md'
     - Table of Contents: '00-Table-of-Contents.md'
+# start nav
     - 1. Intro and How to Use This Book: './01-Intro-and-How-to-Use-This-Book.md'
     - 2. Getting Started: './02-Getting-Started.md'
     - 3. CLI: './03-CLI.md'
@@ -34,6 +35,7 @@ nav:
     - 29. Comments and Code Documentation: './29-Comments-and-Code-Documentation.md'
     - 30. Packages and Project Structure: './30-Packages-and-Project-Structure.md'
     - 31. Automated Testing: './31-Automated-Testing.md'
+    - 32. Do Another Project: './32-Do-Another-Project.md'
 # end nav
 
 
