made some edits

--- a/python_book/mkdocs.yml
+++ b/python_book/mkdocs.yml
@@ -36,6 +36,7 @@ nav:
     - 30. Packages and Project Structure: './30-Packages-and-Project-Structure.md'
     - 31. Automated Testing: './31-Automated-Testing.md'
     - 32. Do Another Project: './32-Do-Another-Project.md'
+    - 33. Branching Out: './33-Branching-Out.md'
 # end nav
 
 
