--- a/python_book/mkdocs.yml
+++ b/python_book/mkdocs.yml
@@ -37,6 +37,7 @@ nav:
     - 31. Automated Testing: './31-Automated-Testing.md'
     - 32. Do Another Project: './32-Do-Another-Project.md'
     - 33. Branching Out: './33-Branching-Out.md'
+    - E1. Getting Started Again: './E01-Getting-Started-Again.md'
 # end nav
 
 extra_javascript: 
