--- a/python_book/mkdocs.yml
+++ b/python_book/mkdocs.yml
@@ -38,6 +38,7 @@ nav:
     - 32. Do Another Project: './32-Do-Another-Project.md'
     - 33. Branching Out: './33-Branching-Out.md'
     - E1. Getting Started Again: './E01-Getting-Started-Again.md'
+    - E2. Pandas : './E02-Pandas.md'
 # end nav
 
 extra_javascript: 
