--- a/python_book/mkdocs.yml
+++ b/python_book/mkdocs.yml
@@ -38,8 +38,11 @@ nav:
     - 32. Do Another Project: './32-Do-Another-Project.md'
     - 33. Branching Out: './33-Branching-Out.md'
     - E1. Getting Started Again: './E01-Getting-Started-Again.md'
-    - E2. Pandas : './E02-Pandas.md'
-    - E3. Numpy : './E03-Numpy.md'
+    - E2. Numpy : './E02-Numpy.md'
+    - E3. Pandas : './E03-Pandas.md'
+    - E4. Matplotlib : './E04-Matplotlib.md'
+    - E4. Scipy : './E04-Scipy.md'
+    - E5. Units : './E05-Units.md'
     - E10. Bringing it All Together: './E10-Bringing-it-All-Together.md'
 # end nav
 
